# Multiobjective-Counterfactuals-for-Design

./: .gitignore  2D Example.ipynb  2D Paper Results.ipynb  Dockerfile  Example 2D Regression.ipynb  Example FRAMED.ipynb  FRAMED Example.ipynb  README-inprogress.md  README.md  calculate_dtai.py  classification_evaluator.py  classifier_wrapper.py  data_package.py  design_targets.py  dev-requirements.txt  load_data.py  local-pipeline.dockerfile  multi_objective_cfe_generator.py  notebook-requirements.txt  pandas_utility.py  pyproject.toml  requirements.txt  run-tests.sh  stat_methods.py  stats_methods.py
.github/: dependabot.yaml
.github/workflows/: build.yaml  publish.yml  test.yaml
.ipynb_checkpoints/: FRAMED paper results-checkpoint.ipynb
FRAMED Dataset/: validity.csv
Getting Started/: Introduction Notebook 1.ipynb  Introduction Notebook 2.ipynb  Introduction Notebook 3.ipynb  Introduction Notebook 4.ipynb
decode_mcd/: DPPsampling.py  data_package.py
notebooks/: 2D Paper Results.ipynb  DPP testing.ipynb  Example 2D Regression.ipynb  Example Mixed Variable.ipynb  Getting_Started.ipynb  dev-requirements.txt  load_data.py  plotting.ipynb
notebooks/CLIP/: clipBIKED_datatypes.csv  clipBIKED_processed_datatypes.csv  clip_sBIKED_datatypes.csv  clip_sBIKED_processed.csv  clip_sBIKED_processed_datatypes.csv
notebooks/FRAMED Dataset/: all_structural_data.csv
notebooks/clip-modules/: GA_Clip_utils.py  clip_cfs.py  dataFrameTools.py  load_data.py  processGen.py
old_notebooks/: Example FRAMED.ipynb  Introduction Notebook 1.ipynb  plotting.ipynb
old_notebooks/FRAMED Dataset/: all_structural_data.csv  validity.csv
src/decode_mcd/: __init__.py  counterfactuals_generator.py  data_package.py  design_targets.py  mcd_dataset.py  mcd_exceptions.py  mcd_generator.py  mcd_problem.py  multi_objective_cfe_generator.py  multi_objective_problem.py
src/decode_mcd_private/: DPPsampling.py  MMDP.py  calculate_dtai.py  efficient_mixed_duplicate_elimination.py  stats_methods.py  validation_utils.py
src/private/: calculate_dtai.py  classification_evaluator.py
tests/: GA_Clip_utils.py  alt_multi_label_predictor.py  clip_test.py  gen_toy_dataset.py  test_2d_example.py  test_ablation.py  test_calculate_dtai.py  test_classification_evaluator.py  test_classifier_wrapper.py  test_counterfactuals_generator.py  test_data_package.py  test_design_targets.py  test_framed_example.py  test_improved_duplicate_elimination.py  test_mcd_e2e.py  test_mixed_operations.py  test_multi_objective_cfe_generator.py  test_multi_objective_problem.py  test_quick_start.py  test_stats_methods.py  text_improved_duplicate_elimination.py  toy_x.csv  toy_y.csv
