# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decode-mcd"
version = "1.0.0.rc1"
description = "MCD generates counterfactuals that meet multiple, customizable objectives in both the feature and performance spaces."
readme = "README.md"
authors = [{ name = "Lyle Regenwetter & Yazan Abu Obaideh" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["counterfactuals", "design", "multi-objective", "multiobjective", "machine-learning"]
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "dill (>=0.3.9,<0.4.0)",
    "pymoo (>=0.6.1.3,<0.7.0.0)"
]
requires-python = ">=3.9,<4.0.0"

[project.urls]
Homepage = "https://github.com/Lyleregenwetter/Multiobjective-Counterfactuals-for-Design"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
scikit-learn = "^1.6.1"

